✅ solved the bug of overlaping milliseconds in the stopwatch

--- a/css/style.css
+++ b/css/style.css
@@ -1027,6 +1027,42 @@ video {
   width: 12rem;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-\[185px\] {
+  width: 185px;
+}
+
+.w-\[187px\] {
+  width: 187px;
+}
+
+.w-\[190px\] {
+  width: 190px;
+}
+
+.w-\[191px\] {
+  width: 191px;
+}
+
+.w-\[192px\] {
+  width: 192px;
+}
+
 .min-w-10 {
   min-width: 2.5rem;
 }
